# v2pipeline

./: .gitignore  00_copy_raw.py  00_stage0_copy_raw.py  01_clean.py  01_stage1_clean.py  02_chunk.py  02_stage2_chunk.py  03_chroma.py  03_stage3_build_chroma.py  README.md  chunk_count.py  common.py  debug_doc_id_counts.py  init_folders.py  merge_chunks_jsonl.py  pyproject.toml  query.py  repo_marker.py  requirements.txt  run_pipeline.py
src/pipeline/: __init__.py  __main__.py  cli.py  common.py
src/pipeline/stages/: __init__.py  stage0_copy_raw.py  stage1_clean.py  stage2_chunk.py  stage3_chroma.py
src/pipeline/tools/: __init__.py  init_folders.py  merge_chunks_jsonl.py  query.py  run_pipeline.py
